# sopagrami

./: CMakeLists.txt  README.md  pyproject.toml  test.py
cpp/: CMakeLists.txt
cpp/include/: alg.hpp
cpp/src/: main.cpp
src/: bindings.cpp
src/sopagrami/: __init__.py
